# hikvision_ros

./: CMakeLists.txt  README.md  package.xml
config/: hik_cam_params.yaml  ip_cam_gui.perspective  ip_cam_keyboard_teleop_params.yaml  ip_cam_params_test.yaml
include/: hik_cam.h
launch/: hikvision_joint.launch  ip.launch  start_hik_cam_stream.launch  start_ip_cam_stream_and_gui.launch  start_ip_cam_stream_bttm_side.launch  start_ip_cam_stream_bttm_side_du.launch  start_ip_cam_stream_top_side.launch
node/: hik_cam_node.cpp
scripts/: korkyra_hik_setup_and_run.sh  losinj_hik_setup_and_run.sh  mljet_hik_setup_and_run.sh
src/: hik_cam.cpp
